# pyonig

./: .coverage  .coveragerc  .gitmodules  MANIFEST.in  README.md  main.py  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: README.md  build-wheels.yml  release.yml  test.yml
build-scripts/: build-linux-wheels.sh  build-macos-wheels.sh
demo/: DEMO_FIXES.md  README.md  demo.sh  pyonig-demo.cast  sample.css  sample.html  sample.js  sample.md  sample.py  sample.sh  sample.toml  sample.ts  sample.yaml
docs/: API_USAGE.md  BUILDING.md  CONTENT_DETECTION.md  CREDITS.md  DOCUMENTATION_SUMMARY.md  FEATURE_CONTENT_DETECTION.md  FINAL_SUMMARY.md  FINAL_THEME_SUMMARY.md  GITHUB_ACTIONS_SUMMARY.md  PROGRESS.md  README.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  STATUS.md  TESTING.md  THEME_ALIASES.md  THEME_AUTO_DETECTION.md  THEME_AUTO_DETECTION_SUMMARY.md  VSCODE_THEMES_INTEGRATION.md  VSCODE_THEMES_SUMMARY.md  WHEEL_BUILD_STATUS.md
scripts/: clean_jsonc_themes.py  download_vscode_themes.py
src/pyonig/: __init__.py  _pyonigmodule.c  api.py  cli.py  colorize.py  curses_defs.py  detect.py  theme.py  ui_constants.py
src/pyonig/tm_tokenize/: reg.py  (+1 more)
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_colorize.py  test_colorize_coverage.py  test_detect.py  test_pyonig.py  test_theme.py
vscode_themes/: LICENSE.txt
wheelhouse/: pyonig-0.1.0-cp310-cp310-linux_x86_64.whl  pyonig-0.1.0-cp311-cp311-linux_x86_64.whl  pyonig-0.1.0-cp312-cp312-linux_x86_64.whl  pyonig-0.1.0-cp313-cp313-linux_x86_64.whl  pyonig-0.1.0-cp313-cp313t-linux_x86_64.whl
(+12 files in other folders)
